[package]
name = "setup-console"
version = "0.1.0"
authors = ["Yuto Inoue <yuto0214w@gmail.com>"]
edition = "2021"
license = "MIT"
description = """
A library that provides a function to fix ANSI escaping problem in Windows.
"""
repository = "https://github.com/yuto0214w/setup-console"
readme = "README.md"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Threading"] }
